# hfs

./: .coveragerc  .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  LICENSE  README.md  README.rst  appveyor.yml  classify.py  hfs.sbatch  pyproject.toml  rate_limits.db  requirements.txt  setup.py  t.mark.parametrize(
.github/workflows/: lint-test.yml  python-app.yml
algo/: datago_digraph_np.npz  filter.py  fixtures.py  go.py  helpers.py  hip.py  hnb.py  hnbs.py  mrt.py  rnb.py  test.py  test_2.py
algo/data/: go.py
algo/test/: test_classes.py  test_fixtures.py  test_helpers.py
doc/: api.rst  conf.py  index.rst  introduction.rst  quick_start.rst  refs.bib  requirements.txt
doc/algorithms/: eager.rst  gtd.rst  hill_climbing.rst  hnb.rst  index.rst  lazy.rst  mrhip.rst  shsel.rst  tan.rst  tsel.rst
doc/experiments/: eagertable.csv  evaluation.rst  index.rst  lazytable.csv  lazytable2.csv  results.rst  setup.rst
doc/get_started/: index.rst  quick_start.rst
examples/: eager_learning_example.py  lazy_learning.py  lazy_learning_example.py  plot_classifier.py  plot_template.py  plot_transformer.py  rate_limits.db
experiments/: experiments.py  experiments_eager.py
hfs/: __init__.py  base.py  eagerHierarchicalFeatureSelector.py  estimator.py  feature_selection.py  feature_selector.py  filter.py  go.py  gtd.py  helpers.py  hie_aode.py  hill_climbing.py  hip.py  hnb.py  hnbs.py  lazyHierarchicalFeatureSelector.py  metrics.py  mr.py  mrt.py  preprocessing.py  rnb.py  shsel.py  tan.py  tsel.py
hfs2/: _template.py  helpers.py  hnb.py  hnbs.py  mrt.py
(+55 files in other folders)
