[tool.poetry]
name = "hfs"
version = "0.1.0"
description = ""
authors = ["Jasperhino"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
kgextension = "^0.1.1"
setuptools = "58.5.3"
sphinx-gallery = "^0.15.0"
sphinx-rtd-theme = "^2.0.0"
info-gain = "^1.0.1"
matplotlib = "^3.8.2"
networkx = "^3.2.1"
numpy = "^1.26.2"
nxontology = "^0.5.0"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
pytz = "^2023.3.post1"
pandas = "^2.1.4"
wandb = "^0.16.1"
numpydoc = "^1.6.0"
sphinxcontrib-bibtex = "^2.6.1"
pytest = "^7.4.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
